--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,11 @@ services:
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: ""
+      REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_USER_POOLS_ID: "eu-west-2_UwmuYxTYK"
+      REACT_APP_CLIENT_ID: "14ulu5241qkvn3irqieol3di60"
     build: ./frontend-react-js
     ports:
       - "3000:3000"
