--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+      AWS_COGNITO_USER_POOL_ID: "eu-west-2_UBAu4ZVec"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "7g4n0fafqlc327frq74e2b3tdt" 
     build: ./backend-flask
     ports:
       - "4567:4567"
